# pyroll-gui

./: .gitignore  README.md  TODO.md  TODO.txt  create-doc-pictures.ps1  hatch.toml  mypy.ini  pyproject.toml  test.xml  todo2.txt
.github/workflows/: build.yml
.qt_for_python/uic/: mainwindow.py
docs/: grooveOptions.d2  integration_tests.md
pyroll/gui/: __init__.py  background_worker.py  constants.py  createGroovePic.py  grooveOptions.py  groove_options.py  in_profiles.py  logging_help.py  main.py  mainwindow.py  mainwindow.ui  process_data.xsd  pyinstaller.ps1  pyrollgui.py  rollpass_table.py  rowData.py  row_data.py  solve_process.py  svg_scaling.py  table_data.py  text_processing.py  ui_mainwindow.py  visualization.py  xml_processing.py
pyroll/gui/backend/: __init__.py  main.py  requirements.txt
pyroll/gui/backend/simulation/: __init__.py  helpers.py  in_profile_plot_runner.py  pyroll_basic_runner.py  roll_pass_plot_runner.py
pyroll/gui/frontend/: package-lock.json  package.json
pyroll/gui/frontend/public/: index.html
pyroll/gui/frontend/src/: App.js
pyroll/gui/frontend/src/components/InProfileTab/: BoxProfile.js  CommonParameters.js  HexagonProfile.js  InProfileLoader.js  InProfilePlot.js  InProfileSaver.js  InProfileTab.js  InputField.js  RoundProfile.js  ScientificInputField.js  SquareProfile.js
pyroll/gui/frontend/src/components/InProfileTab/Functionality/: InProfileLoader.js  InProfileSaver.js
pyroll/gui/frontend/src/components/InProfileTab/InProfiles/: BoxProfile.js  CommonParameters.js  HexagonProfile.js  RoundProfile.js  SquareProfile.js
pyroll/gui/frontend/src/components/InProfileTab/InputField/: InputField.js
pyroll/gui/frontend/src/components/PassDesignTab/: GrooveParameterBox.js  PassDesignLoader.js  PassDesignRow.js  PassDesignSaver.js  PassDesignTab.js  PassDesignTable.js  PassTypeField.js  RollPassPlot.js  SolveMethodConfig.js  SolveMethodSelector.js
pyroll/gui/frontend/src/components/PassSequenceVisualizationTab/: PassSequenceVisualizationTab.js  PassSequenceVisualizer.js
pyroll/gui/frontend/src/components/ResultsTab/: ResultCrossSectionPlot.js  ResultFillingRatioPlot.js  ResultRollForcePlot.js  ResultRollTorquePlot.js  ResultStrainPlot.js  ResultTemperaturePlot.js  ResultsTab.js  ResultsTable.js
pyroll/gui/frontend/src/data/: GrooveDefinitions.js  PassTypeDefinitions.js
pyroll/gui/frontend/src/helpers/: DataConverter.js  DataParser.js  Notification.js  ResultsExport.js
pyroll/gui/frontend/src/utils/: GrooveApi.js  ProfileAPI.js  api.js
pyroll/ui/gui/: README.md
tests/: process_data.xml  pyroll-core-readme-example.xml  test_process_data_xsd.py
