[tool.poetry]
name = "pyroll-gui"
version = "0.1.0"
description = ""
authors = [
    "Hannes Krumbiegel <...>",
    "Max Weiner <max.weiner@imf.tu-freiberg.de>"
]
packages = [
    {include = "pyroll/gui"}
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyroll = "^1.0.1"
pyroll-integral-thermal = "^1.1.0"
pyroll-wusatowski-spreading = "^1.1.0"
pyroll-hensel-power-and-labour = "^1.0.0"
pyroll-lendl-equivalent-method = "^1.0.0"
pyroll-freiberg-flow-stress = "^1.1.1"
pyroll-zouhar-contact = "^1.0.0"
xmlschema = "^2.0.1"
PySide6 = "6.3.*"
pyinstaller = "^5.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.6.0"

[tool.poetry.scripts]
pyroll-gui = 'pyroll.gui.pyrollgui:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
