[tool.poetry]
name = "pyroll-gui"
version = "0.1.0"
description = ""
authors = [
    "Hannes Krumbiegel <...>",
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
]
packages = [{ include = "pyroll/gui" }]

[tool.poetry.dependencies]
# Super frustrating that we can't update yet due to the PySide6 bug -> TODO: Check if this might be fixed in the future
python = ">=3.9, <3.11"
pyroll = { version = ">=1.0.1", allow-prereleases = true }
pyroll-integral-thermal = { version = ">=1.1.0", allow-prereleases = true }
pyroll-wusatowski-spreading = { version = ">=1.1.0", allow-prereleases = true }
pyroll-hensel-power-and-labour = { version = ">=1.0.0", allow-prereleases = true }
pyroll-lendl-equivalent-method = { version = ">=1.0.0", allow-prereleases = true }
pyroll-freiberg-flow-stress = { version = ">=1.1.1", allow-prereleases = true }
pyroll-zouhar-contact = { version = ">=1.0.0", allow-prereleases = true }
#xmlschema = "^2.0.1"
PySide6 = "6.3.*"       # The latest version causes a DLL error on Windows
pyinstaller = ">=5.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.6.0"

[tool.poetry.scripts]
pyroll-gui = 'pyroll.gui.pyrollgui:main'

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"