[project]
name = "pyroll-gui"
description = "Extension providing a graphic user interface for pyroll-basic."
authors = [
    { name = "Christoph Renzing", email = "christophrenzing@posteo.de" },
    { name = "Hannes Krumbiegel", email = "" },
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-gui"
documentation = "https://github.com/pyroll-project/pyroll-gui/blob/main/docs/docs.pdf"

readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-basic",
    "uvicorn",
    "fastapi",
    "pydantic",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"